--- a/front.html
+++ b/front.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 	<title>Arts By Bose</title>
-	<link rel="stylesheet" type="text/css" href="E:\FirstWeb\design.css">
+	<link rel="stylesheet" type="text/css" href="design.css">
 	</head>
 	
 	<header id="header">
-		<h1><img id="header-img" src="E:\FirstWeb\logo2.jfif" alt="LOGO"><a href="https://www.youtube.com/channel/UCrswAganzaps3DQ4hSA-_eA" >ARTS BY BOSE</a></h1>
+		<h1><img id="header-img" src="logo2.jfif" alt="LOGO"><a href="https://www.youtube.com/channel/UCrswAganzaps3DQ4hSA-_eA" >ARTS BY BOSE</a></h1>
 
 		<nav id="nav-bar">
 		<ul>
