--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
 	<main>
 	<div id="first">
 		<div id="logo">
-			<br><br><h1><img id="header-img" src="images/logo2.jfif" alt="LOGO">
+		<br><h1><img id="header-img" src="images/logo2.jfif" alt="LOGO">
 			ARTS BY BOSE</h1>
 			</div>
 
 	<form id="form" action="https://www.freecodecamp.com/email-submit">
-		<br><br><h2> Welcome to my Gallery </h2>
-		<label for="email">Want to get notified for new Art Works!</label>
-			<br><br><input class="opac" id="email" type="email" placeholder="Enter email ID">
-		<br><br><label for="more">Want to see something else?</label><br>
-			<br><textarea id="more" class="opac" rows="3" cols="40" placeholder="Tell us!"></textarea>
-	<br><br><button id="submit" type="submit">Submit</button>
+		<h2> Welcome to my Gallery </h2>
+		
+		<label for="email"><h5>Want to get notified for new Art Works!</h5></label>
+			<input class="opac" id="email" type="email" placeholder="Enter email ID">
+		<label for="more"><h5>Want to see something else?</h5></label>
+			<textarea id="more" class="opac" rows="3" cols="40" placeholder="Tell us!"></textarea>
+	<br><button id="submit" type="submit">Submit</button>
 	</form>
 	
 	<br><h2 id="Start">Let's start exploring!</h2>
@@ -54,8 +55,8 @@
 
 	<div id="video">
 		<br><h2>Tutorial</h2>
-			<p>The following contains a glance of a drawing done by me. Click here  <a href="https://youtu.be/W6mHHwencJk">to view full video</a>
-</p>
+			<h4>The following contains a glance of a drawing done by me. Click here  <a href="https://youtu.be/W6mHHwencJk">to view full video</a>
+			</h4>
 			<div id="centre">
 			<video src="images/video.mp4" alt="Video snap" controls>
 	</div></div>
