--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<br><button id="submit" type="submit">Submit</button>
 	</form>
 	
-	<br><h2 id="Start">Let's start exploring!</h2>
+	<br><h2 id="Start">Let's start exploring!</h2><br>
 	</div>
 		<br><h2> Types of Arts </h2>
 	<ul id="types">
