--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<input class="opac" id="email" type="email" placeholder="Enter email ID">
 		<label for="more"><h5>Want to see something else?</h5></label>
 			<textarea id="more" class="opac" rows="3" cols="40" placeholder="Tell us!"></textarea>
-	<br><button id="submit" type="submit">Submit</button>
+	<br><br><button id="submit" type="submit">Submit</button>
 	</form>
 	
 	<br><h2 id="Start">Let's start exploring!</h2><br>
@@ -74,9 +74,8 @@
 	</div>	
 </div>
 </main>
-	
+	<br><br>
 	<footer id="connect">
 		<h4>Contact for more information.<a href="https://www.youtube.com/channel/UCrswAganzaps3DQ4hSA-_eA">Here</a></h4>
-		<p>This is a sample</p>
 	</footer>
 </html>
